--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
 	<title>Temperature Converting</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
 <body>
 	<form>
 		<label for="Temperature">What Sayeth the Mercury?</label>
-		<input type="text" name="units" value="" placeholder="Temperature">
+		<input type="text" id="converter" value="" placeholder="Temperature">
 
 		<label for="Celsius">Celsius</label>
-		<input type="radio" name="units" value="Celsius" placeholder="Degrees">
+		<input type="radio" name="units" value="celsius" id="cel" placeholder="Degrees">
 
 		<label for="Fahrenheit">Fahreinheit</label>
-		<input type="radio" name="units" value="Fahreinheit" placeholder="Degrees">
+		<input type="radio" name="units" value="fahreinheit" id="fah" placeholder="Degrees">
 
 		<input type="reset" value="Reset">
 	</form>
 
 	<form>
-		<button type="convert">Convert Temp!</button>
+	<!-- 	<button type="submit" id="convert">Convert Temp!</button> -->
 
 		<label for="Converted Temp">Converted Temp:</label>
-		<input id="newTemp" placeholder="Will appear here"></input>
+		<input placeholder="Will appear here"></input>
 	</form>
+
+	<button type="submit" id="convert">Convert Temp!</button>
+
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
