--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 	</form>
 
 	<form>
-	<!-- 	<button type="submit" id="convert">Convert Temp!</button> -->
+
 
 		<label for="Converted Temp">Converted Temp:</label>
-		<input placeholder="Will appear here"></input>
+		<input placeholder="Will appear here" id="newTemp"></input>
 	</form>
 
-	<button type="submit" id="convert">Convert Temp!</button>
+	<button id="convert">Convert Temp!</button>
 
 	<script type="text/javascript" src="script.js"></script>
 
