reset button now resets everything

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 		<label for="Fahrenheit">Fahreinheit</label>
 		<input type="radio" name="units" value="fahreinheit" id="fah" placeholder="Degrees">
 		<br>
-		<input type="reset" value="Reset">
+		<input type="reset" value="Reset" id="reset">
 
 		<label for="Converted Temp">Converted Temp:</label>
 		<div id="tempStyle">
 			<input placeholder="Will appear here" id="newTemp"></input>
 		</div>
-
 	</form>
 
 	<button id="convert">Convert Temp!</button>
