fixed typo in html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<br>
 		<input type="text" id="converter" value="" placeholder="Temperature">
 		<br>
-		<label for="Celsius">Celsius</label>
-		<input type="radio" name="units" value="celsius" id="cel" placeholder="Degrees">
-
-		<label for="Fahrenheit">Fahreinheit</label>
-		<input type="radio" name="units" value="fahreinheit" id="fah" placeholder="Degrees">
+		<label for="Celsius">C to F</label>
+		<input type="radio" name="units" value="celsius" id="inputCel" placeholder="Degrees">
+		<br>
+		<label for="Fahrenheit">F to C</label>
+		<input type="radio" name="units" value="fahreinheit" id="inputFah" placeholder="Degrees">
 		<br>
 		<input type="reset" value="Reset" id="reset">
 
