enter now converts

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 		</div>
 	</form>
 
-	<button id="convert">Convert Temp!</button>
-
+	<button id="convert" onkeydown="determineConverter()">Convert Temp!</button>
 
 	<script type="text/javascript" src="script.js"></script>
 
